--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="PROSEPT app"
-      content="Applications for PROSEPT operators"
+      name="App"
+      content="App"
     />
-    <title>PROSEPT app</title>
+    <title>App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
